--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build-and-unit-test:
 
     runs-on: ubuntu-latest
 
@@ -23,6 +23,10 @@ jobs:
       run: npm install
     - name: run the unit tests
       run: npm run test:unit
+    - name: start the application
+      run: npm start&
+    - name: run the ui tests
+      run: npm run test:ui
     - name: print username
       run: echo "sgeorgievg"
-      
+    
