--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,8 @@ jobs:
       run: npm run test:unit
     - name: start the application
       run: npm start&
+    - name: install playwright
+      run: npm install -D @playwright/test
     - name: run the ui tests
       run: npm run test:ui
     - name: print username
