--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-unit-test:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -33,4 +33,16 @@ jobs:
       run: npm run test:ui
     - name: print username
       run: echo "sgeorgievg"
-    
+      
+  deploy-to-render:
+      runs-on: ubuntu-latest
+      needs: build-and-test
+      if: github.ref == 'refs/heads/main'
+      steps:
+        - name: Checkout of the repo
+          uses: actions/checkout@v4
+        - name: Deploy to Render in Production
+          uses: johnbeynon/render-deploy-action@v0.0.8
+          with:
+            service-id: ${{ secrets.RENDER_WEB_SERVICE_ID }}
+            api-key: ${{ secrets.RENDER_API_KEY }}
